--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -6498,6 +6498,20 @@ section.lazy-placeholder:after {
 .cid-sDL7N0HhyC UL {
   text-align: center;
 }
+.cid-sLvZJl03D8 {
+  background: #149dcc;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background: linear-gradient(0deg, #149dcc, #ffffff);
+}
+.cid-sLvZJl03D8 .video-block {
+  margin: auto;
+}
+@media (max-width: 768px) {
+  .cid-sLvZJl03D8 .video-block {
+    width: 100% !important;
+  }
+}
 .cid-spanQfGSsr .navbar {
   background: #232323;
   transition: none;
