--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -792,7 +792,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #333333;
+  background-color: #c1c1c1;
 }
 .cid-spanQfGSsr button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -1361,7 +1361,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #333333;
+  background-color: #c1c1c1;
 }
 .cid-spVLp6Lza5 button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -1930,7 +1930,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #333333;
+  background-color: #c1c1c1;
 }
 .cid-spYRjdU3xB button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -2476,7 +2476,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #333333;
+  background-color: #c1c1c1;
 }
 .cid-spZo92rMLN button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -3045,7 +3045,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #333333;
+  background-color: #c1c1c1;
 }
 .cid-spanQfGSsr button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -3537,7 +3537,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #333333;
+  background-color: #c1c1c1;
 }
 .cid-sqASln05x4 button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -4184,7 +4184,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #333333;
+  background-color: #c1c1c1;
 }
 .cid-ssqCholbRc button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -4753,7 +4753,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #333333;
+  background-color: #c1c1c1;
 }
 .cid-stGQMtHq2V button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -5308,7 +5308,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #333333;
+  background-color: #c1c1c1;
 }
 .cid-spanQfGSsr button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -5850,7 +5850,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #333333;
+  background-color: #c1c1c1;
 }
 .cid-swkPXT26ou button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -6381,7 +6381,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #333333;
+  background-color: #c1c1c1;
 }
 .cid-ssrQT2cMM9 button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -7023,7 +7023,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #333333;
+  background-color: #c1c1c1;
 }
 .cid-spanQfGSsr button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -7512,7 +7512,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #333333;
+  background-color: #c1c1c1;
 }
 .cid-sF0xnEaFnC button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -8067,7 +8067,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #333333;
+  background-color: #c1c1c1;
 }
 .cid-sIRo2EyVvY button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -8593,7 +8593,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #333333;
+  background-color: #c1c1c1;
 }
 .cid-sIMTM78prh button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
