--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -792,7 +792,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #c1c1c1;
+  background-color: #f9f295;
 }
 .cid-spanQfGSsr button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -1031,7 +1031,7 @@ section.lazy-placeholder:after {
   color: #149dcc !important;
 }
 .cid-spawN8CQgz {
-  padding-top: 45px;
+  padding-top: 75px;
   padding-bottom: 0px;
   background-color: #4f1d74;
 }
@@ -1361,7 +1361,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #c1c1c1;
+  background-color: #f9f295;
 }
 .cid-spVLp6Lza5 button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -1600,7 +1600,7 @@ section.lazy-placeholder:after {
   color: #149dcc !important;
 }
 .cid-spVLp8F7MJ {
-  padding-top: 45px;
+  padding-top: 75px;
   padding-bottom: 0px;
   background-color: #4f1d74;
 }
@@ -1930,7 +1930,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #c1c1c1;
+  background-color: #f9f295;
 }
 .cid-spYRjdU3xB button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -2169,7 +2169,7 @@ section.lazy-placeholder:after {
   color: #149dcc !important;
 }
 .cid-spYRjfkErh {
-  padding-top: 45px;
+  padding-top: 75px;
   padding-bottom: 0px;
   background-color: #4f1d74;
 }
@@ -2476,7 +2476,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #c1c1c1;
+  background-color: #f9f295;
 }
 .cid-spZo92rMLN button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -2715,7 +2715,7 @@ section.lazy-placeholder:after {
   color: #149dcc !important;
 }
 .cid-spZo94Lxj9 {
-  padding-top: 45px;
+  padding-top: 75px;
   padding-bottom: 0px;
   background-color: #4f1d74;
 }
@@ -3045,7 +3045,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #c1c1c1;
+  background-color: #f9f295;
 }
 .cid-spanQfGSsr button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -3537,7 +3537,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #c1c1c1;
+  background-color: #f9f295;
 }
 .cid-sqASln05x4 button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -4184,7 +4184,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #c1c1c1;
+  background-color: #f9f295;
 }
 .cid-ssqCholbRc button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -4423,7 +4423,7 @@ section.lazy-placeholder:after {
   color: #149dcc !important;
 }
 .cid-ssqChqcvDx {
-  padding-top: 45px;
+  padding-top: 75px;
   padding-bottom: 0px;
   background-color: #4f1d74;
 }
@@ -4753,7 +4753,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #c1c1c1;
+  background-color: #f9f295;
 }
 .cid-stGQMtHq2V button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -4992,7 +4992,7 @@ section.lazy-placeholder:after {
   color: #149dcc !important;
 }
 .cid-stGQMw1UDV {
-  padding-top: 45px;
+  padding-top: 75px;
   padding-bottom: 0px;
   background-color: #4f1d74;
 }
@@ -5308,7 +5308,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #c1c1c1;
+  background-color: #f9f295;
 }
 .cid-spanQfGSsr button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -5547,7 +5547,7 @@ section.lazy-placeholder:after {
   color: #149dcc !important;
 }
 .cid-spaxVY7aMn {
-  padding-top: 45px;
+  padding-top: 75px;
   padding-bottom: 0px;
   background-color: #34164b;
 }
@@ -5850,7 +5850,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #c1c1c1;
+  background-color: #f9f295;
 }
 .cid-swkPXT26ou button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -6089,7 +6089,7 @@ section.lazy-placeholder:after {
   color: #149dcc !important;
 }
 .cid-swkPXUJ8Zs {
-  padding-top: 45px;
+  padding-top: 75px;
   padding-bottom: 0px;
   background-color: #421367;
 }
@@ -6381,7 +6381,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #c1c1c1;
+  background-color: #f9f295;
 }
 .cid-ssrQT2cMM9 button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -6620,7 +6620,7 @@ section.lazy-placeholder:after {
   color: #149dcc !important;
 }
 .cid-ssrQT3UV36 {
-  padding-top: 45px;
+  padding-top: 75px;
   padding-bottom: 0px;
   background-color: #4f1d74;
 }
@@ -7023,7 +7023,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #c1c1c1;
+  background-color: #f9f295;
 }
 .cid-spanQfGSsr button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -7512,7 +7512,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #c1c1c1;
+  background-color: #f9f295;
 }
 .cid-sF0xnEaFnC button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -7751,7 +7751,7 @@ section.lazy-placeholder:after {
   color: #149dcc !important;
 }
 .cid-sF0xnFJcca {
-  padding-top: 45px;
+  padding-top: 75px;
   padding-bottom: 0px;
   background-color: #4f1d74;
 }
@@ -8067,7 +8067,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #c1c1c1;
+  background-color: #f9f295;
 }
 .cid-sIRo2EyVvY button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -8306,7 +8306,7 @@ section.lazy-placeholder:after {
   color: #149dcc !important;
 }
 .cid-sIRo2GqqdF {
-  padding-top: 45px;
+  padding-top: 75px;
   padding-bottom: 0px;
   background-color: #4f1d74;
 }
@@ -8593,7 +8593,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #c1c1c1;
+  background-color: #f9f295;
 }
 .cid-sIMTM78prh button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -8832,7 +8832,7 @@ section.lazy-placeholder:after {
   color: #149dcc !important;
 }
 .cid-sIMTM9Ac6q {
-  padding-top: 45px;
+  padding-top: 75px;
   padding-bottom: 0px;
   background-color: #4f1d74;
 }
