--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3045,7 +3045,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #333333;
+  background-color: #8b5baf;
 }
 .cid-spanQfGSsr button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
