--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -792,7 +792,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #f9f295;
+  background-color: #ff3366;
 }
 .cid-spanQfGSsr button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -1361,7 +1361,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #333333;
+  background-color: #ff3366;
 }
 .cid-spVLp6Lza5 button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -1930,7 +1930,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #333333;
+  background-color: #ff3366;
 }
 .cid-spYRjdU3xB button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -2476,7 +2476,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #333333;
+  background-color: #ff3366;
 }
 .cid-spZo92rMLN button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -3045,7 +3045,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #8b5baf;
+  background-color: #ff3366;
 }
 .cid-spanQfGSsr button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -3537,7 +3537,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #333333;
+  background-color: #ff3366;
 }
 .cid-sqASln05x4 button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -4184,7 +4184,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #333333;
+  background-color: #ff3366;
 }
 .cid-ssqCholbRc button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -4753,7 +4753,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #333333;
+  background-color: #ff3366;
 }
 .cid-stGQMtHq2V button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -5308,7 +5308,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #333333;
+  background-color: #ff3366;
 }
 .cid-spanQfGSsr button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -5850,7 +5850,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #333333;
+  background-color: #ff3366;
 }
 .cid-swkPXT26ou button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -6381,7 +6381,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #333333;
+  background-color: #ff3366;
 }
 .cid-ssrQT2cMM9 button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -6950,7 +6950,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #333333;
+  background-color: #ff3366;
 }
 .cid-sF0xnEaFnC button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -7505,7 +7505,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #333333;
+  background-color: #ff3366;
 }
 .cid-sIRo2EyVvY button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -8031,7 +8031,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #333333;
+  background-color: #ff3366;
 }
 .cid-sIMTM78prh button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -8600,7 +8600,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #f9f295;
+  background-color: #ff3366;
 }
 .cid-sLGkwtAO7m button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
