update mbr-additional.css -change bg to webp

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3284,7 +3284,7 @@ section.lazy-placeholder:after {
   color: #149dcc !important;
 }
 .cid-spUDIETPKP {
-  background-image: url("../../../assets/images/home-667x485.png");
+  background-image: url("../../../assets/images/webp/home-667x485.webp");
 }
 .cid-sLFjqL2T71 {
   padding-top: 30px;
