--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3776,7 +3776,7 @@ section.lazy-placeholder:after {
   color: #149dcc !important;
 }
 .cid-sqASloPFoy {
-  background-image: url("../../../assets/images/home-667x485.png");
+  background-image: url("../../../assets/images/webp/home-667x485.webp");
 }
 .cid-sqASlsCRew {
   padding-top: 30px;
